--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/cstewa91/parallax-css/issues"
   },
-  "homepage": "https://github.com/cstewa91/parallax-css#readme"
+  "homepage": "https://github.com/cstewa91/parallax-css#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "pug": "^2.0.3"
+  }
 }
